# medical_dataset_reviewer

./: README.md  pyproject.toml  requirements.txt
seg_qc_tool/: __init__.py  controller.py  gui.py  io_utils.py  main.py  matcher.py  models.py
tests/: test_controller.py  test_io_utils.py  test_matcher.py
