[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seg_qc_tool"
version = "0.1.0"
description = "Segmentation QC tool"
requires-python = ">=3.9"
authors = [{name="Your Name", email="you@example.com"}]
dependencies = [
    "PySide6",
    "nibabel",
    "pydicom",
    "SimpleITK",
    "numpy",
    "scikit-image",
    "python-Levenshtein"
]

[project.scripts]
seg_qc_tool = "seg_qc_tool.main:main"
